--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -271,6 +271,7 @@ body {
 				success : function(data) {
 					$('#message').val("");
 					$("#newModal").modal('hide');
+					fetchMessages(getUrlMessages(date, null), updateAllMessages);
 					
 				},
 				error : function(textStatus, errorThrown) {
