--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@ margin:auto;
 </head>
 <body class="text-center">
 	<!--  div th:replace="fragments/admin-fragments :: admin-nav" th:remove="tag"></div-->
-	<h1>CDX Stridsjournal</h1>
+	<h1 style="margin-bottom:50px;">CDX Stridsjournal</h1>
 	
 
 	<div class="modal fade" id="newModal" tabindex="-1" role="dialog"
@@ -140,18 +140,12 @@ margin:auto;
 					<li class="nav-item "><a data-target="#all"
 						class="nav-link active">Alle</a></li>
 					<li class="nav-item"><a data-target="#felles" class="nav-link">Felles</a></li>
-					<li class="nav-item"><a data-target="#soc1" class="nav-link">SOC
-							1</a></li>
-					<li class="nav-item"><a data-target="#soc2" class="nav-link">SOC
-							2</a></li>
-					<li class="nav-item"><a data-target="#soc3" class="nav-link">SOC
-							3</a></li>
-					<li class="nav-item"><a data-target="#soc4" class="nav-link">SOC
-							4</a></li>
-					<li class="nav-item"><a data-target="#soc5" class="nav-link">SOC
-							5</a></li>
-					<li class="nav-item"><a data-target="#soc6" class="nav-link">Drop
-							In</a></li>
+					<li class="nav-item"><a data-target="#soc1" class="nav-link">SOC1</a></li>
+					<li class="nav-item"><a data-target="#soc2" class="nav-link">SOC2</a></li>
+					<li class="nav-item"><a data-target="#soc3" class="nav-link">SOC3</a></li>
+					<li class="nav-item"><a data-target="#soc4" class="nav-link">SOC4</a></li>
+					<li class="nav-item"><a data-target="#soc5" class="nav-link">SOC5</a></li>
+					<li class="nav-item"><a data-target="#soc6" class="nav-link">DropIn</a></li>
 				</ul>
 				<div class="messages" >
 
