--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -125,7 +125,7 @@ margin:auto;
 	<div class="FAB" id="fab-add">
 		<div class="FAB__action-button">
 			<i class="action-button__icon material-icons">add</i>
-			<p class="action-button__text--hide">Add group</p>
+			<p class="action-button__text--hide">Ny rapport</p>
 		</div>
 	</div>
 	<div class="container-fluid">
