--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@ table {
 				<div class="modal-body">
 					<form th:action="@{/login}" method="post" id="loginForm"
 						class="text-left">
-						<div class="form-group">
+						<div class="form-group" style="display:none;">
 							<div class="form-group">
 								<label for="from">Fra</label> <select class="form-control"
 									id="from">
