--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -56,7 +56,7 @@ section > h2{
 	z-index:-2;
    	height:100vh;
 	
-	background: url(/assets/img/the-ball-stadion-football-the-pitch-47730.jpeg) no-repeat center center; 
+	background: url(https://static.pexels.com/photos/373543/pexels-photo-373543.jpeg) no-repeat center center; 
 	background-size: cover;
 }
 
