--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<div th:replace="fragments/header :: meta" th:remove="tag"></div>
-		<div th:replace="fragments/header :: generalCss" th:remove="tag"></div>
-		<link th:href="@{/assets/css/style.css}" rel="stylesheet" />
+<head>
+<div th:replace="fragments/header :: meta" th:remove="tag"></div>
+<div th:replace="fragments/header :: generalCss" th:remove="tag"></div>
+<link th:href="@{/assets/css/style.css}" rel="stylesheet" />
 
-	</head>
+</head>
 
 <body>
 	<div class="img-container"></div>
@@ -13,89 +13,85 @@
 	<!--  div class="line-banner"></div-->
 	<div th:replace="fragments/header :: header" th:remove="tag"></div>
 
-	<div class="jumbotron"  style="text-align:center;  background:rgba(0,0,0,0); color:white;">
-	 	<span class="icon-user logo" style="font-size:80px;"></span>
-			<h2 class="text-header">Register</h2>
-				
-			<div class="col-xs-10 offset-xs-1 col-md-6 offset-md-3">
-				<form id="registerForm" th:action="@{/register}" method="post"
-					style="text-align: left;">
-					<div class="form-group">
-						<!--  label for="emailRegisterInput">E-post</label-->
-						<div class="input-group">
-							<div class="input-group-addon">
-								<span class="icon-user"></span>
-							</div>
-							<input type="email" name="username" class="form-control"
-								id="emailRegisterInput"
-								th:placeholder="E-mail"/>
+	<div class="jumbotron"
+		style="text-align: center; background: rgba(0, 0, 0, 0); color: white;">
+		<span class="icon-user logo" style="font-size: 80px;"></span>
+		<h2 class="text-header">Register</h2>
 
+		<div class="col-xs-10 offset-xs-1 col-md-6 offset-md-3">
+			<form id="registerForm" th:action="@{/register}" method="post"
+				style="text-align: left;">
+				<div class="form-group">
+					<!--  label for="emailRegisterInput">E-post</label-->
+					<div class="input-group">
+						<div class="input-group-addon">
+							<span class="icon-user"></span>
 						</div>
-						<div class="form-control-feedback sr-only text-danger"
-							id="emailRegisterError">Invalid e-mail</div>
+						<input type="email" name="username" class="form-control"
+							id="emailRegisterInput" th:placeholder="E-mail" />
 
 					</div>
-					<div class="form-group">
-						<div class="input-group">
-							<div class="input-group-addon">
-								<span class="icon-key"></span>
-							</div>
-							<input type="password" class="form-control"
-								id="passwordRegisterInput"
-								th:placeholder="Password"
-								name="password" />
+					<div class="form-control-feedback sr-only text-danger"
+						id="emailRegisterError">Invalid e-mail</div>
+
+				</div>
+				<div class="form-group">
+					<div class="input-group">
+						<div class="input-group-addon">
+							<span class="icon-key"></span>
 						</div>
-						<div class="form-control-feedback sr-only text-danger"
-							id="passwordRegisterError">The password must be at least 6 characters</div>
-
+						<input type="password" class="form-control"
+							id="passwordRegisterInput" th:placeholder="Password"
+							name="password" />
 					</div>
-					<div class="form-group">
-						<div class="input-group">
-							<div class="input-group-addon">
-								<span class="icon-key"></span>
-							</div>
-							<input type="password" class="form-control"
-								name="passwordRepeat" id="passwordRepeatRegisterInput"
-								th:placeholder="RepeatPassword" />
+					<div class="form-control-feedback sr-only text-danger"
+						id="passwordRegisterError">The password must be at least 6
+						characters</div>
+
+				</div>
+				<div class="form-group">
+					<div class="input-group">
+						<div class="input-group-addon">
+							<span class="icon-key"></span>
 						</div>
-						<div class="form-control-feedback sr-only text-danger"
-							id="passwordRepeatRegisterError">The password does not match</div>
-
+						<input type="password" class="form-control" name="passwordRepeat"
+							id="passwordRepeatRegisterInput" th:placeholder="RepeatPassword" />
 					</div>
-					<div class="form-group">
-						<label class="form-check-inline"> <input
-							class="form-check-input" type="checkbox" id="vilkarForBruk"
-							value="option1" /><span>
-								I accepts the </span> <a href="/toc" target="_blank"> terms of condition</a>  and <a href="/pp"
-							target="_blank">
-								Privacy policy </a>
-						</label>
-						<div class="form-control-feedback sr-only"
-							id="vilkarForBrukError">You have to accept the terms of conditions and privacy policy</div>
-					</div>
-					<div class="form-group">
-						<div class="g-recaptcha"
-							data-sitekey="6LedYgsUAAAAANjHOyjveSH_5eIE0JLk3GY22ON3"
-							data-callback="captchaCallback()"></div>
-						<div class="form-control-feedback sr-only text-danger"
-							id="recaptchaError">You have to accept the Personvernerklæringen.</div>
-						
-					</div>
-				</form>
+					<div class="form-control-feedback sr-only text-danger"
+						id="passwordRepeatRegisterError">The password does not match</div>
 
+				</div>
+				<div class="form-group">
+					<label class="form-check-inline"> <input
+						class="form-check-input" type="checkbox" id="vilkarForBruk"
+						value="option1" /><span> I accepts the </span> <a href="/toc"
+						target="_blank"> terms of condition</a> and <a href="/pp"
+						target="_blank"> Privacy policy </a>
+					</label>
+					<div class="form-control-feedback sr-only" id="vilkarForBrukError">You
+						have to accept the terms of conditions and privacy policy</div>
+				</div>
+				<div class="form-group">
+					<div class="g-recaptcha"
+						data-sitekey="6LedYgsUAAAAANjHOyjveSH_5eIE0JLk3GY22ON3"
+						data-callback="captchaCallback()"></div>
+					<div class="form-control-feedback sr-only text-danger"
+						id="recaptchaError">You have to accept the
+						Personvernerklæringen.</div>
 
+				</div>
 				<div style="padding-top: 10px; padding-bottom: 10px;">
 					<!--  button type="button" class="btn btn-default" data-dismiss="modal">Avbryt</button-->
-					<button type="button" id="sendRegisterButton"
-						class="btn btn-block btn-warning"
-						>Registerer</button>
+					<button type="submit" id="sendRegisterButton"
+						class="btn btn-block btn-warning">Registerer</button>
 				</div>
 
-				<p class="text-small text-xs-center">
-					<span> Already a user?</span> <a th:href="@{/login}">Login</a>
-				</p>
+			</form>
+			<p class="text-small text-xs-center">
+				<span> Already a user?</span> <a th:href="@{/login}">Login</a>
+			</p>
 
-			</div>
+		</div>
 
 
 
@@ -110,7 +106,7 @@
 	<script>
 		$("#login").addClass('active');
 	</script>
-	
+
 
 </body>
 </html>
