--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<meta name="description"
-			content="Todo application" />
-		<meta name="keywords" content="Todo, calendar, organize, simple"/>
+			content="Journal application" />
+		<meta name="keywords" content="Journal"/>
 		<meta name="author" content="Ida Marie Frøseth" />
 		<title>Stridsjournal</title>
 	</head>
@@ -22,13 +22,13 @@
 		<link th:href="@{/assets/css/ie10-viewport-bug-workaround.css}"
 			rel="stylesheet" />
 
-		<link
+		<!--link
 			href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css"
-			rel="stylesheet" />
+			rel="stylesheet" /-->
 			
 		<!-- FONTS -->
-		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,500"
-			rel="stylesheet" />
+		<!--  link href="https://fonts.googleapis.com/css?family=Roboto:100,300,500"
+			rel="stylesheet" /-->
 		
 		<link rel="stylesheet" type="text/css"
 			th:href="@{/assets/vendor/sweetalert-master/dist/sweetalert.css}" />
@@ -54,31 +54,5 @@
 		
 	
 </head>
-	
-	<body>
-		
-		<div th:fragment="header">
-			<div class="line-banner"></div>
-	
-			<div class="masthead clearfix">
-				<div class="inner">
-					<div class="navbar-brand hidden-xs-down">appiTude<!--  span class="icon-check" style="font-size:2.5em;"></span--><!--  img src="assets/icon/logo.svg" alt="" width="60px"
-							height="60px"/--> 
-					</div>
-					<!-- nav class="nav nav-masthead">
-						<a class="nav-link" href="/index" id="navHome">Home</a>
-						<a class="nav-link" href="/todo/dashboard"
-							th:if="${account != null}"
-							th:classappend="${#httpServletRequest.getRequestURI() == '/todo/dashboard' ? 'active':''}">Todo</a>
-						<a class="nav-link" href="/login" id="login"
-							th:if="${account == null}">Login</a>
-						<a class="nav-link" href="/logout"
-							th:if="${account != null}">Logout</a>
-					</nav-->
-				</div>
-	
-	
-			</div>
-		</div>
-	</body>
+
 </html>
